--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -20,7 +20,7 @@
     "import automark as am\n",
     "\n",
     "# fill in you student number as your username\n",
-    "am.configure(username='0')\n",
+    "am.configure(username='15250008')\n",
     "\n",
     "# to check your progress, you can run this function\n",
     "am.get_progress()"
@@ -98,13 +98,13 @@
     "# Customers Table\n",
     "con.execute('''\n",
     "CREATE TABLE IF NOT EXISTS customers (\n",
-    "    customer_id char(10) NOT NULL, \n",
-    "    firstname varchar(32) default NULL, \n",
-    "    lastname varchar(32) default NULL, \n",
+    "    customer_id char(10) NOT NULL,\n",
+    "    firstname varchar(32) default NULL,\n",
+    "    lastname varchar(32) default NULL,\n",
     "    city varchar(32) default NULL,\n",
-    "    address varchar(128) default NULL, \n",
-    "    email varchar(128) default NULL, \n",
-    "    \n",
+    "    address varchar(128) default NULL,\n",
+    "    email varchar(128) default NULL,\n",
+    "\n",
     "    PRIMARY KEY (customer_id) )\n",
     "''')\n",
     "\n",
@@ -112,31 +112,31 @@
     "con.execute('''\n",
     "CREATE TABLE IF NOT EXISTS laptops (\n",
     "    model char(4) NOT NULL default '',\n",
-    "    speed double default NULL, \n",
-    "    ram int default NULL, \n",
-    "    hd int default NULL, \n",
-    "    screen double default NULL, \n",
-    "    price double default NULL, \n",
-    "    \n",
+    "    speed double default NULL,\n",
+    "    ram int default NULL,\n",
+    "    hd int default NULL,\n",
+    "    screen double default NULL,\n",
+    "    price double default NULL,\n",
+    "\n",
     "    PRIMARY KEY  (model) )\n",
     "''')\n",
     "\n",
     "# PCs Table\n",
     "con.execute('''\n",
     "CREATE TABLE IF NOT EXISTS pcs (\n",
-    "    model char(4) NOT NULL, \n",
-    "    speed double NOT NULL, \n",
-    "    ram int NOT NULL, \n",
-    "    hd int NOT NULL, \n",
-    "    price double NOT NULL, \n",
-    "    \n",
+    "    model char(4) NOT NULL,\n",
+    "    speed double NOT NULL,\n",
+    "    ram int NOT NULL,\n",
+    "    hd int NOT NULL,\n",
+    "    price double NOT NULL,\n",
+    "\n",
     "    PRIMARY KEY  (model) )\n",
     "''')\n",
     "\n",
     "# Printers Table\n",
     "con.execute('''CREATE TABLE IF NOT EXISTS printers (\n",
-    "    model char(4) NOT NULL default '', \n",
-    "    color varchar(5) default NULL, \n",
+    "    model char(4) NOT NULL default '',\n",
+    "    color varchar(5) default NULL,\n",
     "    type varchar(10) default NULL,\n",
     "    price double default NULL,\n",
     "\n",
@@ -144,7 +144,7 @@
     "''')\n",
     "\n",
     "# Products Table\n",
-    "con.execute('''CREATE TABLE IF NOT EXISTS products ( \n",
+    "con.execute('''CREATE TABLE IF NOT EXISTS products (\n",
     "    maker char(1) default NULL,\n",
     "    model char(4) NOT NULL default '',\n",
     "    type varchar(10) default NULL,\n",
@@ -153,14 +153,14 @@
     "''')\n",
     "\n",
     "# Sales Table\n",
-    "con.execute('''CREATE TABLE IF NOT EXISTS sales ( \n",
-    "    customer_id char(10) NOT NULL default '', \n",
-    "    model char(4) NOT NULL default '',   \n",
-    "    quantity int default NULL,   \n",
-    "    day date NOT NULL default '0000-00-00', \n",
-    "    paid double default NULL,   \n",
-    "    type_of_payment varchar(32) default NULL,   \n",
-    "    \n",
+    "con.execute('''CREATE TABLE IF NOT EXISTS sales (\n",
+    "    customer_id char(10) NOT NULL default '',\n",
+    "    model char(4) NOT NULL default '',\n",
+    "    quantity int default NULL,\n",
+    "    day date NOT NULL default '0000-00-00',\n",
+    "    paid double default NULL,\n",
+    "    type_of_payment varchar(32) default NULL,\n",
+    "\n",
     "    PRIMARY KEY  (customer_id,model,day) )\n",
     "''')"
    ]
@@ -183,111 +183,111 @@
     "# Customers Table\n",
     "con.execute('''\n",
     "INSERT INTO customers (customer_id, firstname, lastname, city, address, email)\n",
-    "VALUES \n",
-    "    ('1122334455', 'Ann', 'O''Brien', 'Rotterdam', '1 Jervis St.', 'ann@uva.nl'), \n",
-    "    ('1231231231', 'John', 'Doe', 'Amsterdam', NULL, NULL), \n",
+    "VALUES\n",
+    "    ('1122334455', 'Ann', 'O''Brien', 'Rotterdam', '1 Jervis St.', 'ann@uva.nl'),\n",
+    "    ('1231231231', 'John', 'Doe', 'Amsterdam', NULL, NULL),\n",
     "    ('1234567890', 'Maya', 'Ramanath', 'Diemen', 'Dalsteindreef 3002', NULL),\n",
-    "    ('9876543210', 'Ji', 'Zhang', 'Utrecht', 'Jaarbeursplien 24', 'jack@ucc.ie'), \n",
+    "    ('9876543210', 'Ji', 'Zhang', 'Utrecht', 'Jaarbeursplien 24', 'jack@ucc.ie'),\n",
     "    ('9999999999', 'Norah', 'Jones', 'Amsterdam', 'Passheuvelweg 34', 'nj@yahoo.com');\n",
     "''')\n",
     "\n",
     "# Laptops Table\n",
     "con.execute('''\n",
-    "INSERT INTO laptops (model, speed, ram, hd, screen, price) \n",
-    "VALUES \n",
+    "INSERT INTO laptops (model, speed, ram, hd, screen, price)\n",
+    "VALUES\n",
     "    ('2001', 2, 2048, 240, 20.1, 3673),\n",
-    "    ('2002', 1.73, 1024, 80, 17, 949), \n",
-    "    ('2003', 1.8, 512, 60, 15.4, 549), \n",
+    "    ('2002', 1.73, 1024, 80, 17, 949),\n",
+    "    ('2003', 1.8, 512, 60, 15.4, 549),\n",
     "    ('2004', 2, 512, 60, 13.3, 1150),\n",
-    "    ('2005', 2.16, 1024, 120, 17, 2500), \n",
-    "    ('2006', 2, 2048, 80, 15.4, 1700), \n",
+    "    ('2005', 2.16, 1024, 120, 17, 2500),\n",
+    "    ('2006', 2, 2048, 80, 15.4, 1700),\n",
     "    ('2007', 1.83, 1024, 120, 13.3, 1429),\n",
-    "    ('2008', 1.6, 1024, 100, 15.4, 900), \n",
-    "    ('2009', 1.6, 512, 80, 14.1, 680), \n",
+    "    ('2008', 1.6, 1024, 100, 15.4, 900),\n",
+    "    ('2009', 1.6, 512, 80, 14.1, 680),\n",
     "    ('2010', 2, 2048, 160, 15.4, 2300);\n",
     "''')\n",
     "\n",
     "# PCs Table\n",
     "con.execute('''\n",
-    "INSERT INTO pcs (model, speed, ram, hd, price) \n",
-    "VALUES \n",
+    "INSERT INTO pcs (model, speed, ram, hd, price)\n",
+    "VALUES\n",
     "    ('1001', 2.66, 1024, 250, 2114),\n",
-    "    ('1002', 2.1, 512, 250, 995), \n",
-    "    ('1003', 1.42, 512, 80, 478), \n",
-    "    ('1004', 2.8, 1024, 250, 649), \n",
-    "    ('1005', 3.2, 512, 250, 630), \n",
-    "    ('1006', 3.2, 1024, 320, 1049), \n",
-    "    ('1007', 2.2, 1024, 200, 510), \n",
-    "    ('1008', 2.2, 2048, 250, 770), \n",
-    "    ('1009', 2, 1024, 250, 650), \n",
+    "    ('1002', 2.1, 512, 250, 995),\n",
+    "    ('1003', 1.42, 512, 80, 478),\n",
+    "    ('1004', 2.8, 1024, 250, 649),\n",
+    "    ('1005', 3.2, 512, 250, 630),\n",
+    "    ('1006', 3.2, 1024, 320, 1049),\n",
+    "    ('1007', 2.2, 1024, 200, 510),\n",
+    "    ('1008', 2.2, 2048, 250, 770),\n",
+    "    ('1009', 2, 1024, 250, 650),\n",
     "    ('1010', 2.8, 2048, 300, 770),\n",
-    "    ('1011', 1.86, 2048, 160, 959), \n",
-    "    ('1012', 2.8, 1024, 160, 649), \n",
+    "    ('1011', 1.86, 2048, 160, 959),\n",
+    "    ('1012', 2.8, 1024, 160, 649),\n",
     "    ('1013', 3.06, 512, 80, 529);\n",
     "''')\n",
     "\n",
     "# Printers Table\n",
     "con.execute('''\n",
-    "INSERT INTO printers (model, color, type, price) \n",
-    "VALUES \n",
+    "INSERT INTO printers (model, color, type, price)\n",
+    "VALUES\n",
     "    ('3001', 'TRUE', 'ink-jet', 99),\n",
-    "    ('3002', 'FALSE', 'laser', 239), \n",
-    "    ('3003', 'TRUE', 'laser', 899), \n",
+    "    ('3002', 'FALSE', 'laser', 239),\n",
+    "    ('3003', 'TRUE', 'laser', 899),\n",
     "    ('3004', 'TRUE', 'ink-jet', 120),\n",
-    "    ('3005', 'FALSE', 'laser', 120), \n",
-    "    ('3006', 'TRUE', 'ink-jet', 100), \n",
+    "    ('3005', 'FALSE', 'laser', 120),\n",
+    "    ('3006', 'TRUE', 'ink-jet', 100),\n",
     "    ('3007', 'TRUE', 'laser', 200);\n",
     "''')\n",
     "\n",
     "# Products Table\n",
     "con.execute('''\n",
-    "INSERT INTO products (maker, model, type) \n",
-    "VALUES \n",
-    "    ('A', '1001', 'pc'), \n",
+    "INSERT INTO products (maker, model, type)\n",
+    "VALUES\n",
+    "    ('A', '1001', 'pc'),\n",
     "    ('A', '1002', 'pc'),\n",
-    "    ('A', '1003', 'pc'), \n",
-    "    ('B', '1004', 'pc'), \n",
-    "    ('B', '1005', 'pc'), \n",
-    "    ('B', '1006', 'pc'), \n",
+    "    ('A', '1003', 'pc'),\n",
+    "    ('B', '1004', 'pc'),\n",
+    "    ('B', '1005', 'pc'),\n",
+    "    ('B', '1006', 'pc'),\n",
     "    ('C', '1007', 'pc'),\n",
-    "    ('D', '1008', 'pc'), \n",
-    "    ('D', '1009', 'pc'), \n",
-    "    ('D', '1010', 'pc'), \n",
-    "    ('E', '1011', 'pc'), \n",
+    "    ('D', '1008', 'pc'),\n",
+    "    ('D', '1009', 'pc'),\n",
+    "    ('D', '1010', 'pc'),\n",
+    "    ('E', '1011', 'pc'),\n",
     "    ('E', '1012', 'pc'),\n",
-    "    ('E', '1013', 'pc'), \n",
-    "    ('E', '2001', 'laptop'), \n",
-    "    ('E', '2002', 'laptop'), \n",
+    "    ('E', '1013', 'pc'),\n",
+    "    ('E', '2001', 'laptop'),\n",
+    "    ('E', '2002', 'laptop'),\n",
     "    ('E', '2003', 'laptop'),\n",
-    "    ('A', '2004', 'laptop'), \n",
-    "    ('A', '2005', 'laptop'), \n",
-    "    ('A', '2006', 'laptop'), \n",
+    "    ('A', '2004', 'laptop'),\n",
+    "    ('A', '2005', 'laptop'),\n",
+    "    ('A', '2006', 'laptop'),\n",
     "    ('B', '2007', 'laptop'),\n",
-    "    ('F', '2008', 'laptop'), \n",
-    "    ('F', '2009', 'laptop'), \n",
-    "    ('G', '2010', 'laptop'), \n",
-    "    ('E', '3001', 'printer'), \n",
-    "    ('E', '3002', 'printer'), \n",
-    "    ('E', '3003', 'printer'), \n",
-    "    ('D', '3004', 'printer'), \n",
+    "    ('F', '2008', 'laptop'),\n",
+    "    ('F', '2009', 'laptop'),\n",
+    "    ('G', '2010', 'laptop'),\n",
+    "    ('E', '3001', 'printer'),\n",
+    "    ('E', '3002', 'printer'),\n",
+    "    ('E', '3003', 'printer'),\n",
+    "    ('D', '3004', 'printer'),\n",
     "    ('D', '3005', 'printer'),\n",
-    "    ('H', '3006', 'printer'), \n",
-    "    ('H', '3007', 'printer'); \n",
+    "    ('H', '3006', 'printer'),\n",
+    "    ('H', '3007', 'printer');\n",
     "''')\n",
     "\n",
     "# Sales Table\n",
     "con.execute('''\n",
-    "INSERT INTO sales (customer_id, model, quantity, day, paid, type_of_payment) \n",
-    "VALUES \n",
-    "    ('1122334455', '2010', 1, '2020-12-19', 2300, 'mastercard credit'), \n",
-    "    ('1122334455', '3001', 1, '2020-12-18', 99, 'cash'), \n",
-    "    ('1231231231', '2002', 2, '2020-12-19', 1898, 'visa credit'), \n",
-    "    ('1231231231', '3002', 1, '2020-12-18', 239, 'cash'), \n",
+    "INSERT INTO sales (customer_id, model, quantity, day, paid, type_of_payment)\n",
+    "VALUES\n",
+    "    ('1122334455', '2010', 1, '2020-12-19', 2300, 'mastercard credit'),\n",
+    "    ('1122334455', '3001', 1, '2020-12-18', 99, 'cash'),\n",
+    "    ('1231231231', '2002', 2, '2020-12-19', 1898, 'visa credit'),\n",
+    "    ('1231231231', '3002', 1, '2020-12-18', 239, 'cash'),\n",
     "    ('1234567890', '1001', 1, '2020-12-20', 1902.6, 'mastercard credit'),\n",
-    "    ('9876543210', '1007', 1, '2020-12-17', 510, 'visa debit'), \n",
-    "    ('9876543210', '1007', 3, '2020-12-19', 1530, 'visa debit'), \n",
-    "    ('9876543210', '2002', 1, '2020-12-17', 949, 'visa debit'), \n",
-    "    ('9999999999', '1007', 1, '2020-12-20', 459, 'visa credit'), \n",
+    "    ('9876543210', '1007', 1, '2020-12-17', 510, 'visa debit'),\n",
+    "    ('9876543210', '1007', 3, '2020-12-19', 1530, 'visa debit'),\n",
+    "    ('9876543210', '2002', 1, '2020-12-17', 949, 'visa debit'),\n",
+    "    ('9999999999', '1007', 1, '2020-12-20', 459, 'visa credit'),\n",
     "    ('9999999999', '3007', 2, '2020-12-20', 360, 'visa credit');\n",
     "''')"
    ]
@@ -388,9 +388,9 @@
     "    con.register('sales',sales)\n",
     "    con.register('laptops',laptops)\n",
     "    con.register('pcs',pcs)\n",
-    "    \n",
+    "\n",
     "    result = con.execute(query).fetchdf()\n",
-    "    \n",
+    "\n",
     "    return result"
    ]
   },
@@ -447,7 +447,7 @@
     "    ### YOUR CODE ###\n",
     "    #################\n",
     "    query = \"\"\n",
-    "    \n",
+    "\n",
     "    return query"
    ]
   },
@@ -593,7 +593,7 @@
     "    ### YOUR CODE ###\n",
     "    #################\n",
     "    query = \"\"\n",
-    "    \n",
+    "\n",
     "    return query"
    ]
   },
@@ -652,7 +652,7 @@
     "    ### YOUR CODE ###\n",
     "    #################\n",
     "    query = \"\"\n",
-    "    \n",
+    "\n",
     "    return query"
    ]
   },
@@ -711,7 +711,7 @@
     "    ### YOUR CODE ###\n",
     "    #################\n",
     "    query = \"\"\n",
-    "   \n",
+    "\n",
     "    return query"
    ]
   },
@@ -765,13 +765,13 @@
    "outputs": [],
    "source": [
     "def a1a_t6_customer_id():\n",
-    "    \"\"\"Find the customer_id of customers who have the letter 'e' either in their first name \n",
+    "    \"\"\"Find the customer_id of customers who have the letter 'e' either in their first name\n",
     "       or in their last name\"\"\"\n",
     "    #################\n",
     "    ### YOUR CODE ###\n",
     "    #################\n",
     "    query = \"\"\n",
-    "    \n",
+    "\n",
     "    return query"
    ]
   },
@@ -827,15 +827,15 @@
    "outputs": [],
    "source": [
     "def a1a_t7_highest_price_USD():\n",
-    "    \"\"\"Assume all prices in the table Laptops are in Euro. List the prices of laptops with at least 1024 ram. \n",
-    "    You should return the price in USD in a column called 'price (USD)'. Assume that 1 USD = 0.85 EURO. \n",
+    "    \"\"\"Assume all prices in the table Laptops are in Euro. List the prices of laptops with at least 1024 ram.\n",
+    "    You should return the price in USD in a column called 'price (USD)'. Assume that 1 USD = 0.85 EURO.\n",
     "    Name the price column 'price (USD)'.\n",
     "    \"\"\"\n",
     "    #################\n",
     "    ### YOUR CODE ###\n",
     "    #################\n",
     "    query = \"\"\n",
-    " \n",
+    "\n",
     "    return query"
    ]
   },
@@ -917,7 +917,7 @@
     "    ### YOUR CODE ###\n",
     "    #################\n",
     "    query = \"\"\n",
-    "    \n",
+    "\n",
     "    return query"
    ]
   },
@@ -979,7 +979,7 @@
     "    ### YOUR CODE ###\n",
     "    #################\n",
     "    query = \"\"\n",
-    "    \n",
+    "\n",
     "    return query"
    ]
   },
@@ -1040,14 +1040,14 @@
    "outputs": [],
    "source": [
     "def a1b_t1c_customer_number_purchase():\n",
-    "    \"\"\" List firstnames of customers in an ascending order \n",
+    "    \"\"\" List firstnames of customers in an ascending order\n",
     "    based on the number of purchases made by customers with this firstname.\n",
     "    \"\"\"\n",
     "    #################\n",
     "    ### YOUR CODE ###\n",
     "    #################\n",
     "    query = \"\"\n",
-    "    \n",
+    "\n",
     "    return query"
    ]
   },
@@ -1109,7 +1109,7 @@
     "    \"\"\"\n",
     "    #################\n",
     "    ### YOUR CODE ###\n",
-    "    #################   \n",
+    "    #################\n",
     "    query = \"\"\n",
     "\n",
     "    return query"
@@ -1170,7 +1170,7 @@
    "outputs": [],
    "source": [
     "def a1b_t2a_avg_money_spent():\n",
-    "    \"\"\" Find the city and the average amount of money spent by customers in each city. \n",
+    "    \"\"\" Find the city and the average amount of money spent by customers in each city.\n",
     "        Name the column for the amount 'avg_spend'\n",
     "    \"\"\"\n",
     "    #################\n",
@@ -1241,7 +1241,7 @@
     "    ### YOUR CODE ###\n",
     "    #################\n",
     "    query = \"\"\n",
-    "    \n",
+    "\n",
     "    return query"
    ]
   },
