--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -28,7 +28,7 @@
     "import math\n",
     "\n",
     "# fill in you student number as your username\n",
-    "am.configure(username='0')\n",
+    "am.configure(username='15250008')\n",
     "\n",
     "# to check your progress, you can run this function\n",
     "am.get_progress()"
@@ -76,41 +76,41 @@
     "            for mapped_key, mapped_value in f_map(key, value):\n",
     "                if print_debug_text: print(f\"      ({mapped_key}, {mapped_value})\")\n",
     "                map_output.append((mapped_key, mapped_value))\n",
-    "        # Store output partition of this map operation        \n",
-    "        map_output_partitions.append(map_output)        \n",
-    "    \n",
-    "    # Next, we start the shuffle phase. We need to create several reducer partitions from the map outputs, \n",
+    "        # Store output partition of this map operation\n",
+    "        map_output_partitions.append(map_output)\n",
+    "\n",
+    "    # Next, we start the shuffle phase. We need to create several reducer partitions from the map outputs,\n",
     "    # assign each key to a partition and collect all the values for this key.\n",
     "    if print_debug_text: print(\"\\n---Starting SHUFFLE-phase.---\")\n",
     "    reduce_input_partitions = []\n",
     "    # We create as many reducer partitions as specified by num_reducers\n",
     "    for _ in range(0, num_reducers):\n",
     "        reduce_input_partitions.append(dict())\n",
-    "        \n",
+    "\n",
     "    # We shuffle each map output partition now. In a real mapreduce system, this would run\n",
-    "    # in parallel on different machines.     \n",
+    "    # in parallel on different machines.\n",
     "    for counter, map_output_partition in enumerate(map_output_partitions):\n",
-    "        if print_debug_text: print(f\"  Shuffling map output input partition {counter}\")    \n",
+    "        if print_debug_text: print(f\"  Shuffling map output input partition {counter}\")\n",
     "        # We process each (key, value) pair from the map-output here\n",
     "        for key, value in map_output_partition:\n",
     "            # We determine the target partition for this key via hash-partitioning\n",
     "            target_partition_index = abs(hash(key)) % num_reducers\n",
-    "            if print_debug_text: print(f\"    Assigning key [{key}] to reducer input {target_partition_index} via hash-partitioning\")            \n",
+    "            if print_debug_text: print(f\"    Assigning key [{key}] to reducer input {target_partition_index} via hash-partitioning\")\n",
     "            # We add the value to the group of the key in the target partition\n",
     "            target_partition = reduce_input_partitions[target_partition_index]\n",
     "            if not key in target_partition:\n",
-    "                target_partition[key] = []            \n",
+    "                target_partition[key] = []\n",
     "            target_partition[key].append(value)\n",
-    "    \n",
+    "\n",
     "    # Next, we run the reduce-phase\n",
     "    if print_debug_text: print(\"\\n---Starting REDUCE-phase.---\")\n",
     "    reduce_output_partitions = []\n",
-    "        \n",
+    "\n",
     "    # We reduce each reduce partition now. In a real mapreduce system, this would run\n",
-    "    # in parallel on different machines.            \n",
+    "    # in parallel on different machines.\n",
     "    for counter, reduce_input_partition in enumerate(reduce_input_partitions):\n",
     "        reduce_output = []\n",
-    "        if print_debug_text: print(f\"  Applying f_reduce to reduce_input partition {counter}\")    \n",
+    "        if print_debug_text: print(f\"  Applying f_reduce to reduce_input partition {counter}\")\n",
     "        # We apply f_reduce to each key and its corresponding values now and collect the results\n",
     "        for key, values in reduce_input_partition.items():\n",
     "            if print_debug_text: print(f\"    f_reduce({key}, {values}) -> \")\n",
@@ -118,8 +118,8 @@
     "                if print_debug_text: print(f\"      ({reduced_key}, {reduced_value})\")\n",
     "                reduce_output.append((reduced_key, reduced_value))\n",
     "        reduce_output_partitions.append(reduce_output)\n",
-    "        \n",
-    "    return reduce_output_partitions     "
+    "\n",
+    "    return reduce_output_partitions"
    ]
   },
   {
@@ -211,11 +211,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def wordcount_f_map(doc_id, text):   \n",
+    "def wordcount_f_map(doc_id, text):\n",
     "    output_tuples = []\n",
     "    for word in text.split(\" \"):\n",
     "        output_tuples.append((word, 1))\n",
-    "    return output_tuples        \n",
+    "    return output_tuples\n",
     "\n",
     "def wordcount_f_reduce(word, counts):\n",
     "    total_count = 0\n",
@@ -296,7 +296,7 @@
     "        (\"BrokenSensor\", 5000.0),\n",
     "        (\"Sensor2\", 3.3),\n",
     "        (\"Sensor3\", 0.0),\n",
-    "    ],    \n",
+    "    ],\n",
     "]"
    ]
   },
@@ -327,15 +327,15 @@
    "outputs": [],
    "source": [
     "def a2_t1a_max_measurement_per_sensor():\n",
-    "    def max_measurement_per_sensor_f_map(sensor, measurement):   \n",
+    "    def max_measurement_per_sensor_f_map(sensor, measurement):\n",
     "        # IMPLEMENT ME\n",
     "        return []\n",
     "\n",
-    "    \n",
+    "\n",
     "    def max_measurement_per_sensor_f_reduce(sensor, measurements):\n",
     "        # IMPLEMENT ME\n",
     "        return []\n",
-    "    \n",
+    "\n",
     "    return max_measurement_per_sensor_f_map, max_measurement_per_sensor_f_reduce"
    ]
   },
@@ -405,14 +405,14 @@
    "outputs": [],
    "source": [
     "def a2_t1b_global_max_measurement():\n",
-    "    def global_max_measurement_f_map(sensor, measurement):   \n",
+    "    def global_max_measurement_f_map(sensor, measurement):\n",
     "        # IMPLEMENT ME\n",
     "        return []\n",
-    "    \n",
+    "\n",
     "    def global_max_measurement_f_reduce(sensor, measurements):\n",
     "        # IMPLEMENT ME\n",
     "        return []\n",
-    "    \n",
+    "\n",
     "    return global_max_measurement_f_map, global_max_measurement_f_reduce"
    ]
   },
@@ -431,7 +431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = mapreduce(partitioned_sensor_measurements, *a2_t1b_global_max_measurement(), print_debug_text=True) "
+    "result = mapreduce(partitioned_sensor_measurements, *a2_t1b_global_max_measurement(), print_debug_text=True)"
    ]
   },
   {
@@ -487,7 +487,7 @@
     "    ],\n",
     "    [\n",
     "        (1, \"On each landing, opposite the lift-shaft, the poster with the enormous face gazed from the wall.\"),\n",
-    "        (2, \"All the animals were now present except Moses, the tame raven, who slept on a perch behind the back door.\"),        \n",
+    "        (2, \"All the animals were now present except Moses, the tame raven, who slept on a perch behind the back door.\"),\n",
     "        (3, \"This was in late December 1936, less than seven months ago as I write, and yet it is a period that has already receded into enormous distance.\")\n",
     "    ]\n",
     "]"
@@ -519,9 +519,9 @@
    "outputs": [],
    "source": [
     "def a2_t2_commacount():\n",
-    "    def commacount_f_map(book_id, sentence):   \n",
+    "    def commacount_f_map(book_id, sentence):\n",
     "        # IMPLEMENT ME\n",
-    "        return []          \n",
+    "        return []\n",
     "\n",
     "\n",
     "    def commacount_f_reduce(book_id, counts):\n",
@@ -597,13 +597,13 @@
     "partitioned_movie_stats = [\n",
     "    [\n",
     "        (\"MovieA\", [(1, 100), (2, 20), (3, \"50\")]),\n",
-    "        (\"MovieC\", [(1, 100), (2, \"250\"), (3, 100), (4, \"120\")]),        \n",
+    "        (\"MovieC\", [(1, 100), (2, \"250\"), (3, 100), (4, \"120\")]),\n",
     "        (\"MovieB\", [(1, 1000), (2, 250)]),\n",
     "\n",
     "    ],\n",
     "    [\n",
     "        (\"MovieA\", [(4, 50), (5, \"10\"), (6, 0)]),\n",
-    "        (\"MovieB\", [(3, 0), (4, \"260\")]),  \n",
+    "        (\"MovieB\", [(3, 0), (4, \"260\")]),\n",
     "        (\"MovieC\", [(5, \"180\")]),\n",
     "    ]\n",
     "]"
@@ -627,14 +627,14 @@
    "outputs": [],
    "source": [
     "def a2_t3_max_weekly_visitors():\n",
-    "    def max_weekly_visitors_f_map(movie, weekly_stats):   \n",
+    "    def max_weekly_visitors_f_map(movie, weekly_stats):\n",
     "        # IMPLEMENT ME\n",
     "        return []\n",
     "\n",
     "    def max_weekly_visitors_f_reduce(movie, numbers):\n",
     "        # IMPLEMENT ME\n",
     "        return []\n",
-    "    \n",
+    "\n",
     "    return max_weekly_visitors_f_map, max_weekly_visitors_f_reduce"
    ]
   },
@@ -772,7 +772,7 @@
     "    (1, \"the shawshank redemption\"),\n",
     "    (2, \"the godfather\"),\n",
     "    (3, \"the godfather part two\")\n",
-    "], 2) "
+    "], 2)"
    ]
   },
   {
@@ -800,7 +800,7 @@
     "    output_tuples = []\n",
     "    for word in text.split(\" \"):\n",
     "        output_tuples.append((word, 1))\n",
-    "    return output_tuples        \n",
+    "    return output_tuples\n",
     "\n",
     "wordcounts = documents\\\n",
     "    .flatMap(lambda docid_and_title: extract_words(docid_and_title))\\\n",
@@ -1080,10 +1080,10 @@
    "source": [
     "movie_stats = spark.sparkContext.parallelize([\n",
     "    (\"MovieA\", [(1, 100), (2, 20), (3, \"50\")]),\n",
-    "    (\"MovieC\", [(1, 100), (2, \"250\"), (3, 100), (4, \"120\")]),        \n",
+    "    (\"MovieC\", [(1, 100), (2, \"250\"), (3, 100), (4, \"120\")]),\n",
     "    (\"MovieB\", [(1, 1000), (2, 250)]),\n",
     "    (\"MovieA\", [(4, 50), (5, \"10\"), (6, 0)]),\n",
-    "    (\"MovieB\", [(3, 0), (4, \"260\")]),  \n",
+    "    (\"MovieB\", [(3, 0), (4, \"260\")]),\n",
     "    (\"MovieC\", [(5, \"180\")]),\n",
     "])"
    ]
@@ -1118,7 +1118,7 @@
    "outputs": [],
    "source": [
     "def a2_t5_compute_max_weekly_visitors(movie_stats):\n",
-    "    # IMPLEMENT ME    \n",
+    "    # IMPLEMENT ME\n",
     "    return movie_stats"
    ]
   },
@@ -1177,24 +1177,24 @@
     "\n",
     "customers = spark.sparkContext.parallelize([\n",
     "    Row(customer_id='1122334455', firstname='Ann', lastname='O\\'Brien', city='Rotterdam'),\n",
-    "    Row(customer_id='1231231231', firstname='John', lastname='Doe', city='Amsterdam'), \n",
-    "    Row(customer_id='1234567890', firstname='Paul', lastname='Murphy', city='Diemen'), \n",
-    "    Row(customer_id='9876543210', firstname='Jack', lastname='Murphy', city='Utrecht'), \n",
+    "    Row(customer_id='1231231231', firstname='John', lastname='Doe', city='Amsterdam'),\n",
+    "    Row(customer_id='1234567890', firstname='Paul', lastname='Murphy', city='Diemen'),\n",
+    "    Row(customer_id='9876543210', firstname='Jack', lastname='Murphy', city='Utrecht'),\n",
     "    Row(customer_id='9999999999', firstname='Norah', lastname='Jones', city='Amsterdam')\n",
-    "], 2).toDF()  \n",
+    "], 2).toDF()\n",
     "\n",
     "sales = spark.sparkContext.parallelize([\n",
-    "    Row(customer_id='1122334455', model='2010', quantity=1, paid=2300, type_of_payment='mastercard credit'), \n",
-    "    Row(customer_id='1122334455', model='3001', quantity=1, paid=99, type_of_payment='cash'), \n",
-    "    Row(customer_id='1231231231', model='2002', quantity=2, paid=1898, type_of_payment='visa credit'), \n",
-    "    Row(customer_id='1231231231', model='3002', quantity=1, paid=239, type_of_payment='cash'), \n",
-    "    Row(customer_id='1234567890', model='1001', quantity=1, paid=1902, type_of_payment='mastercard credit'), \n",
-    "    Row(customer_id='9876543210', model='1007', quantity=1, paid=510, type_of_payment='visa debit'), \n",
-    "    Row(customer_id='9876543210', model='1007', quantity=3, paid=1530, type_of_payment='visa debit'), \n",
-    "    Row(customer_id='9876543210', model='2002', quantity=1, paid=949, type_of_payment='visa debit'), \n",
-    "    Row(customer_id='9999999999', model='1007', quantity=1, paid=459, type_of_payment='visa credit'), \n",
+    "    Row(customer_id='1122334455', model='2010', quantity=1, paid=2300, type_of_payment='mastercard credit'),\n",
+    "    Row(customer_id='1122334455', model='3001', quantity=1, paid=99, type_of_payment='cash'),\n",
+    "    Row(customer_id='1231231231', model='2002', quantity=2, paid=1898, type_of_payment='visa credit'),\n",
+    "    Row(customer_id='1231231231', model='3002', quantity=1, paid=239, type_of_payment='cash'),\n",
+    "    Row(customer_id='1234567890', model='1001', quantity=1, paid=1902, type_of_payment='mastercard credit'),\n",
+    "    Row(customer_id='9876543210', model='1007', quantity=1, paid=510, type_of_payment='visa debit'),\n",
+    "    Row(customer_id='9876543210', model='1007', quantity=3, paid=1530, type_of_payment='visa debit'),\n",
+    "    Row(customer_id='9876543210', model='2002', quantity=1, paid=949, type_of_payment='visa debit'),\n",
+    "    Row(customer_id='9999999999', model='1007', quantity=1, paid=459, type_of_payment='visa credit'),\n",
     "    Row(customer_id='9999999999', model='3007', quantity=2, paid=360, type_of_payment='visa credit')\n",
-    "], 2).toDF()     "
+    "], 2).toDF()"
    ]
   },
   {
@@ -1327,11 +1327,11 @@
     "    observed_rows = observed_dataframe.collect()\n",
     "    if len(observed_rows) != len(expected_rows):\n",
     "        print(f\"ERROR: Expected {len(expected_rows)} rows in the result, but found {len(observed_rows)}!\")\n",
-    "    \n",
+    "\n",
     "    for expected_row in expected_rows:\n",
     "        if not expected_row in observed_rows:\n",
     "            print(f\"ERROR: Row {expected_row} missing from result!\")\n",
-    "        else:    \n",
+    "        else:\n",
     "            print(f\"PASS: Encountered expected row {expected_row}\")"
    ]
   },
@@ -1367,7 +1367,7 @@
    "outputs": [],
    "source": [
     "def a2_t6_customers_with_certain_visa_payment(sales):\n",
-    "    # IMPLEMENT ME    \n",
+    "    # IMPLEMENT ME\n",
     "    return sales"
    ]
   },
