feat: implemet asignment 1

--- a/SetupTest.ipynb
+++ b/SetupTest.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "55b0f890",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "8c21fa06",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
        "2    3     Ji           8   27"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "3aa45079",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
     "    con.register('sailors', sailors)\n",
     "\n",
     "    result = con.execute(query).fetchdf()\n",
-    "    \n",
+    "\n",
     "    return result"
    ]
   },
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "b2c36fd7",
    "metadata": {},
    "outputs": [],
@@ -230,8 +230,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "fbc3d374",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>avg(experience)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   avg(experience)\n",
+       "0              7.5"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "execute_local(a0_t1_sailor_avg_experience())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43869c57",
+   "metadata": {},
+   "source": [
+    "Finally, you can have the autograding server test your function by executing the following cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d124ed7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current version of local tests is outdated. The local tests are removed.\n",
+      "Downloading local tests...\n",
+      "Local tests are downloaded.\n",
+      "Running local tests...\n",
+      "a0_t1_sailor_avg_experience successfully passed local tests\n",
+      "Running remote test...\n",
+      "Test was successful. Congratulations!\n"
+     ]
+    }
+   ],
+   "source": [
+    "am.test_student_function(a0_t1_sailor_avg_experience)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33e78a6d",
+   "metadata": {},
+   "source": [
+    "### Dataflows with PySpark - Setup Test \n",
+    "\n",
+    "Next, we test whether you can run [PySpark](https://spark.apache.org/docs/latest/api/python/) programs locally on your computer. For that, we setup a local Pyspark session first.\n",
+    "\n",
+    "Note that you can ignore the following warnings that might occur when executing the next cell:\n",
+    "\n",
+    "```\n",
+    "WARNING: An illegal reflective access operation has occurred\n",
+    "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/usr/local/spark-3.2.0-bin-hadoop3.2/jars/spark-unsafe_2.12-3.2.0.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
+    "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
+    "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
+    "WARNING: All illegal access operations will be denied in a future release\n",
+    "```\n",
+    "\n",
+    "and\n",
+    "\n",
+    "```\n",
+    " WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6ab25d9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: An illegal reflective access operation has occurred\n",
+      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/usr/local/spark-3.2.0-bin-hadoop3.2/jars/spark-unsafe_2.12-3.2.0.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
+      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
+      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
+      "WARNING: All illegal access operations will be denied in a future release\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "24/02/07 13:03:15 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql import Row\n",
+    "\n",
+    "spark = SparkSession.builder \\\n",
+    "    .master(\"local\") \\\n",
+    "    .config(\"spark.driver.bindAddress\", \"127.0.0.1\") \\\n",
+    "    .getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1d3ceb1",
+   "metadata": {},
+   "source": [
+    "Next, we turn our sailors data into a PySpark dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "603eb12c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sailors_df = spark.createDataFrame(sailors)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8f1aff6",
+   "metadata": {},
+   "source": [
+    "#### Test task\n",
+    "\n",
+    "In this test task, we again compute the average experience of sailors that are less than 35 years old. Copy the following pyspark code into the appropriate location in the `a0_t2_sailor_avg_experience_pyspark` function below.\n",
+    "\n",
+    "`return sailors_data.filter(sailors_data['age'] < 35).agg({\"experience\": \"avg\"})`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8ffa27fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def a0_t2_sailor_avg_experience_pyspark(sailors_data):\n",
+    "    return sailors_data.filter(sailors_data['age'] < 35).agg({\"experience\": \"avg\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6d1bd4e",
+   "metadata": {},
+   "source": [
+    "Now you can test the spark program on the local `sailors_df` data. This should again return a single tuple with an attribute `avg(experience)` and a value of 7.5."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "808dd4c3",
    "metadata": {},
    "outputs": [
     {
@@ -278,195 +470,6 @@
     }
    ],
    "source": [
-    "execute_local(a0_t1_sailor_avg_experience())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "43869c57",
-   "metadata": {},
-   "source": [
-    "Finally, you can have the autograding server test your function by executing the following cell."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "d124ed7f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running local tests...\n",
-      "a0_t1_sailor_avg_experience successfully passed local tests\n",
-      "Running remote test...\n",
-      "Test was successful. Congratulations!\n"
-     ]
-    }
-   ],
-   "source": [
-    "am.test_student_function(a0_t1_sailor_avg_experience)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "33e78a6d",
-   "metadata": {},
-   "source": [
-    "### Dataflows with PySpark - Setup Test \n",
-    "\n",
-    "Next, we test whether you can run [PySpark](https://spark.apache.org/docs/latest/api/python/) programs locally on your computer. For that, we setup a local Pyspark session first.\n",
-    "\n",
-    "Note that you can ignore the following warnings that might occur when executing the next cell:\n",
-    "\n",
-    "```\n",
-    "WARNING: An illegal reflective access operation has occurred\n",
-    "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/usr/local/spark-3.2.0-bin-hadoop3.2/jars/spark-unsafe_2.12-3.2.0.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
-    "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
-    "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
-    "WARNING: All illegal access operations will be denied in a future release\n",
-    "```\n",
-    "\n",
-    "and\n",
-    "\n",
-    "```\n",
-    " WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "6ab25d9a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: An illegal reflective access operation has occurred\n",
-      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/usr/local/spark-3.2.0-bin-hadoop3.2/jars/spark-unsafe_2.12-3.2.0.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
-      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
-      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
-      "WARNING: All illegal access operations will be denied in a future release\n",
-      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/02/05 13:10:42 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
-   "source": [
-    "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql import Row\n",
-    "\n",
-    "spark = SparkSession.builder \\\n",
-    "    .master(\"local\") \\\n",
-    "    .config(\"spark.driver.bindAddress\", \"127.0.0.1\") \\\n",
-    "    .getOrCreate()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d1d3ceb1",
-   "metadata": {},
-   "source": [
-    "Next, we turn our sailors data into a PySpark dataframe."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "603eb12c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sailors_df = spark.createDataFrame(sailors)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c8f1aff6",
-   "metadata": {},
-   "source": [
-    "#### Test task\n",
-    "\n",
-    "In this test task, we again compute the average experience of sailors that are less than 35 years old. Copy the following pyspark code into the appropriate location in the `a0_t2_sailor_avg_experience_pyspark` function below.\n",
-    "\n",
-    "`return sailors_data.filter(sailors_data['age'] < 35).agg({\"experience\": \"avg\"})`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "8ffa27fd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def a0_t2_sailor_avg_experience_pyspark(sailors_data):\n",
-    "    return sailors_data.filter(sailors_data['age'] < 35).agg({\"experience\": \"avg\"})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c6d1bd4e",
-   "metadata": {},
-   "source": [
-    "Now you can test the spark program on the local `sailors_df` data. This should again return a single tuple with an attribute `avg(experience)` and a value of 7.5."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "808dd4c3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>avg(experience)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>7.5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   avg(experience)\n",
-       "0              7.5"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "result = a0_t2_sailor_avg_experience_pyspark(sailors_df)\n",
     "result.toPandas()"
    ]
@@ -481,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "ce4a7737",
    "metadata": {},
    "outputs": [
@@ -492,7 +495,8 @@
       "Running local tests...\n",
       "a0_t2_sailor_avg_experience_pyspark successfully passed local tests\n",
       "Running remote test...\n",
-      "Test was successful. Congratulations!\n"
+      "\u001b[31mERROR: You may submit no more than once every 30 seconds. Please submit again after 19 seconds. \u001b[0m\n",
+      "Test failed. Please review your code.\n"
      ]
     }
    ],
