feat: implement part b of assignment 2

--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 118,
    "id": "66585a61",
    "metadata": {},
    "outputs": [
@@ -49,9 +49,9 @@
       "| a2_t1b_global_max_measurement                     | completed      |\n",
       "| a2_t2_commacount                                  | completed      |\n",
       "| a2_t3_max_weekly_visitors                         | completed      |\n",
-      "| a2_t4a_compute_max_value_per_sensor               | not attempted  |\n",
-      "| a2_t4b_compute_global_max_value                   | not attempted  |\n",
-      "| a2_t5_compute_max_weekly_visitors                 | not attempted  |\n",
+      "| a2_t4a_compute_max_value_per_sensor               | completed      |\n",
+      "| a2_t4b_compute_global_max_value                   | completed      |\n",
+      "| a2_t5_compute_max_weekly_visitors                 | completed      |\n",
       "| a2_t6_customers_with_certain_visa_payment         | not attempted  |\n",
       "| a2_t7_find_payment_types                          | not attempted  |\n",
       "| a2_t8_quantities_per_city                         | not attempted  |\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "5352194d",
    "metadata": {},
    "outputs": [],
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "9f012078",
    "metadata": {},
    "outputs": [],
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "82a199ec",
    "metadata": {},
    "outputs": [],
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "951c8b7f",
    "metadata": {},
    "outputs": [],
@@ -1201,91 +1201,27 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "17ae7df7",
-   "metadata": {},
-   "source": [
-    "We write programs in Spark by RDDs into new RDDs. Similar to MapReduce we can write our own functions to apply to the data during these transformations. \n",
-    "\n",
-    "Be sure to consult the [overview over the PySpark RDD API](https://spark.apache.org/docs/latest/api/python/reference/pyspark.html#rdd-apis) for the following tasks.\n",
-    "\n",
-    "\n",
-    "The following code shows our \"Hello World\" example in Spark. We apply a `flatMap` to transform an document into multiple word tuples (analogously to our f_map function in mapreduce) and use Spark's `reduceByKey` transformation to group and reduce the resulting output. Note that we only have to define how to aggregate (e.g., sum) the values here."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6aa350a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def extract_words(docid_and_title):\n",
-    "    text = docid_and_title[1]\n",
-    "    output_tuples = []\n",
-    "    for word in text.split(\" \"):\n",
-    "        output_tuples.append((word, 1))\n",
-    "    return output_tuples\n",
-    "\n",
-    "wordcounts = documents\\\n",
-    "    .flatMap(lambda docid_and_title: extract_words(docid_and_title))\\\n",
-    "    .reduceByKey(lambda count1, count2: count1 + count2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9411509d",
-   "metadata": {},
-   "source": [
-    "We can use the adapted test function to verify that the outputs of our program are correct."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d02cdc38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "verify_locally_from_rdd(wordcounts, 6, [(\"the\", 3), (\"godfather\", 2), (\"two\", 1)])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2e476278",
-   "metadata": {},
-   "source": [
-    "Spark RDD's have a built-in action `collect` which transforms them into a Python collection. In real-world usecases, this would load the data from the cluster into the memory of our program (and potentially cause a crash), but we can use it here for debugging and inspecting the outputs of our transformations.\n",
-    "\n",
-    "Here is how the data looks after the flatMap."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7c2a94e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "documents\\\n",
-    "    .flatMap(lambda docid_and_title: extract_words(docid_and_title))\\\n",
-    "    .collect()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7572c1f8",
-   "metadata": {},
-   "source": [
-    "And this cell shows how the data looks like after the reduce:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "ce181f9b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('godfather', 2),\n",
+       " ('two', 1),\n",
+       " ('the', 3),\n",
+       " ('shawshank', 1),\n",
+       " ('redemption', 1),\n",
+       " ('part', 1)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "documents\\\n",
     "    .flatMap(lambda docid_and_title: extract_words(docid_and_title))\\\n",
@@ -1303,22 +1239,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "f43640d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('the', 1),\n",
+       " ('shawshank', 1),\n",
+       " ('redemption', 1),\n",
+       " ('the', 1),\n",
+       " ('godfather', 1),\n",
+       " ('the', 1),\n",
+       " ('godfather', 1),\n",
+       " ('part', 1),\n",
+       " ('two', 1)]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "wordcounts = documents\\\n",
     "    .flatMap(lambda docid_and_title: [(word, 1) for word in docid_and_title[1].split(\" \")])\\\n",
-    "    .reduceByKey(lambda count1, count2: count1 + count2)"
+    "    .reduceByKey(lambda count1, count2: count1 + count2)\\\n",
+    "    .collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "c2718933",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "RESULT VERIFICATION:\n",
+      "  PASS: Key [the] has expected value!\n",
+      "  PASS: Key [godfather] has expected value!\n",
+      "  PASS: Key [two] has expected value!\n"
+     ]
+    }
+   ],
    "source": [
     "verify_locally_from_rdd(wordcounts, 6, [(\"the\", 3), (\"godfather\", 2), (\"two\", 1)])"
    ]
@@ -1335,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "079f2d77",
    "metadata": {},
    "outputs": [],
@@ -1369,25 +1337,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "96d9679d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Sensor1', 12.3),\n",
+       " ('Sensor2', 9.3),\n",
+       " ('Sensor3', 2.7),\n",
+       " ('Sensor1', 17.1),\n",
+       " ('Sensor2', 7.3),\n",
+       " ('Sensor3', -12),\n",
+       " ('Sensor1', 19.1),\n",
+       " ('Sensor2', 3.3),\n",
+       " ('Sensor3', 0.0)]"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This is just for local development, you can test different transformations here\n",
+    "\n",
     "sensor_measurements\\\n",
+    "    .filter(lambda sensor: sensor[0] != \"BrokenSensor\")\\\n",
+    "    .reduceByKey(lambda first_measurement, second_measurement: max(first_measurement, second_measurement))\\\n",
     "    .collect()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "1ad75423",
    "metadata": {},
    "outputs": [],
    "source": [
     "def a2_t4a_compute_max_value_per_sensor(sensor_measurements):\n",
     "    # IMPLEMENT ME\n",
+    "\n",
+    "    sensor_measurements = sensor_measurements.filter(lambda sensor: sensor[0] != \"BrokenSensor\")\n",
+    "    sensor_measurements =\\\n",
+    "        sensor_measurements.reduceByKey(lambda first_measurement, second_measurement: max(first_measurement, second_measurement))\n",
+    "\n",
     "    return sensor_measurements"
    ]
   },
@@ -1401,10 +1396,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "d7f5b0c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "RESULT VERIFICATION:\n",
+      "  PASS: Key [Sensor1] has expected value!\n",
+      "  PASS: Key [Sensor2] has expected value!\n",
+      "  PASS: Key [Sensor3] has expected value!\n"
+     ]
+    }
+   ],
    "source": [
     "result = a2_t4a_compute_max_value_per_sensor(sensor_measurements)\n",
     "\n",
@@ -1413,10 +1420,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "18c1dc4b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running local tests...\n",
+      "a2_t4a_compute_max_value_per_sensor successfully passed local tests\n",
+      "Running remote test...\n",
+      "Test was successful. Congratulations!\n"
+     ]
+    }
+   ],
    "source": [
     "am.test_student_function(a2_t4a_compute_max_value_per_sensor)"
    ]
@@ -1435,25 +1453,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "id": "36ac29f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('global', 5000.0)]"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This is just for local development, you can test different transformations here\n",
     "sensor_measurements\\\n",
+    "    .map(lambda x: (\"global\", x[1]))\\\n",
+    "    .reduceByKey(lambda first_measurement, second_measurement: max(first_measurement, second_measurement))\\\n",
     "    .collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "f0f51620",
    "metadata": {},
    "outputs": [],
    "source": [
     "def a2_t4b_compute_global_max_value(sensor_measurements):\n",
     "    # IMPLEMENT ME\n",
+    "\n",
+    "    sensor_measurements = sensor_measurements.map(lambda x: (\"global\", x[1]))\n",
+    "    sensor_measurements =\\\n",
+    "        sensor_measurements.reduceByKey(lambda first_measurement, second_measurement: max(first_measurement, second_measurement))\n",
+    "\n",
     "    return sensor_measurements"
    ]
   },
@@ -1467,10 +1503,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "79012fca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "RESULT VERIFICATION:\n",
+      "  PASS: Key [global] has expected value!\n"
+     ]
+    }
+   ],
    "source": [
     "result = a2_t4b_compute_global_max_value(sensor_measurements)\n",
     "verify_locally_from_rdd(result, 1, [(\"global\", 5000)])"
@@ -1478,10 +1524,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "id": "d8f431f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running local tests...\n",
+      "a2_t4b_compute_global_max_value successfully passed local tests\n",
+      "Running remote test...\n",
+      "Test was successful. Congratulations!\n"
+     ]
+    }
+   ],
    "source": [
     "am.test_student_function(a2_t4b_compute_global_max_value)"
    ]
@@ -1498,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "id": "db134ba8",
    "metadata": {},
    "outputs": [],
@@ -1525,25 +1582,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "id": "3cefe3a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('MovieA', 50), ('MovieC', 250), ('MovieB', 260)]"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This is just for local development, you can test different transformations here\n",
     "movie_stats\\\n",
+    "    .flatMap(lambda movie: [(movie[0], int(visitors)) for week, visitors in movie[1] if week > 1])\\\n",
+    "    .reduceByKey(lambda count1, count2: max(count1, count2))\\\n",
     "    .collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "id": "d2822fa6",
    "metadata": {},
    "outputs": [],
    "source": [
     "def a2_t5_compute_max_weekly_visitors(movie_stats):\n",
     "    # IMPLEMENT ME\n",
+    "\n",
+    "    movie_stats = movie_stats.flatMap(lambda movie: [(movie[0], int(visitors)) for week, visitors in movie[1] if week > 1])\n",
+    "    movie_stats = movie_stats.reduceByKey(lambda count1, count2: max(count1, count2))\n",
+    "\n",
     "    return movie_stats"
    ]
   },
@@ -1557,10 +1631,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "id": "31d22185",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "RESULT VERIFICATION:\n",
+      "  PASS: Key [MovieA] has expected value!\n",
+      "  PASS: Key [MovieB] has expected value!\n",
+      "  PASS: Key [MovieC] has expected value!\n"
+     ]
+    }
+   ],
    "source": [
     "result = a2_t5_compute_max_weekly_visitors(movie_stats)\n",
     "verify_locally_from_rdd(result, 3, [('MovieA', 50), ('MovieB', 260), ('MovieC', 250)])"
@@ -1568,10 +1654,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "id": "6962c83d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running local tests...\n",
+      "a2_t5_compute_max_weekly_visitors successfully passed local tests\n",
+      "Running remote test...\n",
+      "Test was successful. Congratulations!\n"
+     ]
+    }
+   ],
    "source": [
     "am.test_student_function(a2_t5_compute_max_weekly_visitors)"
    ]
